<resources>
    <string name="app_name">Digital House Foods</string>
    <string name="splash_screen">splash screen</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="register">Registrar</string>
    <string name="or">or</string>
    <string name="nome">Nome</string>
    <string name="repeat_password">Confirmação de Password</string>
    <string name="Name">Nome</string>
    <string name="NomeCardRestaurante">Tony Roma\'s</string>
    <string name="imagemrestaurantecard">ImagemRestauranteCard</string>
    <string name="tony_roma_s">Tony Roma\'s</string>
    <string name="av_lavandisca_717_indian_polis_s_o_paulo">Av. Lavandisca, 717 - Indianópolis, São Paulo</string>
    <string name="fecha_s_22_00">Fecha às 22:00</string>
    <string name="registrado">Registrado</string>
    <string name="avisoCampoVazio">Algum campo está vazio</string>
    <string name="avisoConfirmacao">O Password está diferente da confirmação</string>
</resources>