<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/size10dp"
    android:layout_marginVertical="@dimen/size5dp"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/size10dp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivImagemCardRestaurante"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size190dp"
            android:contentDescription="@string/imagemrestaurantecard"
            android:src="@drawable/iv_outback"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/size10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNomeCardRestaurante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tony_roma_s"
                android:textSize="@dimen/dim36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEnderecoCardRestaurante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dim14sp"
                android:text="@string/av_lavandisca_717_indian_polis_s_o_paulo"
                android:textColor="@color/colorDarkGray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAbertoCardRestaurante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha_s_22_00"
                android:textSize="@dimen/dim16sp"
                android:textColor="@color/colorDarkGray"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>